src/objects/Course__c.object
<CustomObject>
    <description>This custom object is the top-level of the Course Registration module.  This holds informational fields on what educational course / offering will be placed into a Class.</description>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Case Coordination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substance Abuse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>Area__c</controllingField>
            <picklistValues>
                <fullName>Academic Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Exploration Alumni Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Exploration Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Exploration Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Trip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop-in Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education / Job Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interim SA Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Readiness Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandatory Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Academic Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stages of Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>START Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TASC Readiness Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TASC Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRP One Day Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youth Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <label>Course Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enroll_Referral_Only__c</fullName>
        <label>Enroll Referral Only</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hidden_On_Course_Catalog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the classes associated with this course should default to not appearing on the Course Catalog, unless specifically marked otherwise</description>
        <label>Hidden On Course Catalog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Programs_Served__c</fullName>
        <description>Set if course is for specific youth programs</description>
        <inlineHelpText>Set if course is for specific youth programs</inlineHelpText>
        <label>Program(s) Served</label>
        <picklist>
            <picklistValues>
                <fullName>Adolescent Portable Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK PEAK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronx Choices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn Justice Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BX PEAK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCI START</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic Justice Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Court Screening (FCS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harlem Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justice Scholars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manhattan Choices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non CEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queens Justice Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervised Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Serves_All_Programs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For validation only. If checked, Programs Served multi-select must be empty.</description>
        <inlineHelpText>Check this box if course has open enrollment (available to participants of all youth programs).</inlineHelpText>
        <label>Serves All Programs</label>
        <type>Checkbox</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>Category__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mandatory_Classes</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Mandatory Class</value>
        </filters>
        <label>Mandatory Classes</label>
    </listViews>
    <listViews>
        <fullName>Pick_a_course</fullName>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>what</value>
        </filters>
        <label>Pick a course</label>
    </listViews>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Programs_Served_Selection</fullName>
        <active>true</active>
        <description>If &quot;Serves All Programs&quot; is checked, &quot;Programs Served&quot; may not have any values selected</description>
        <errorConditionFormula>or( 

and(Serves_All_Programs__c , NOT(ISBLANK(Programs_Served__c))), 

and(not(Serves_All_Programs__c), isblank(Programs_Served__c)) 
)</errorConditionFormula>
        <errorDisplayField>Serves_All_Programs__c</errorDisplayField>
        <errorMessage>You must either check off &quot;Serves All Programs&quot;, or select specific programs from the list.</errorMessage>
    </validationRules>
</CustomObject>